# tcrt_user_story

./: .dockerignore  .env.docker.example  .env.example  .gitignore  .stylelintrc.json  AGENTS.md  Dockerfile  JIRA_ANALYSIS_SUMMARY.txt  README.md  Test_Run_Set_PRD.txt  alembic.ini  alembic_audit.ini  alembic_usm.ini  analyze_existing_table.py  config.mysql.yaml.example  config.postgresql.yaml.example  config.sqlite.yaml.example  config.yaml.example  database_init.py  demo_usm_usage.sh  docker-compose.app.yml  docker-compose.mysql.yml  docker-compose.postgres.yml  migrate_tcg_format.py  migrate_test_case_sets.py  mise.toml  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_usm.txt  start.sh  stop.sh  test_team_stats_api.sh  test_usm_parser.py
.claude/: CLAUDE.md  launch.json
.github/: copilot-instructions.md
ai/: README.md  clear_qdrant.py  etl_all_teams.py  etl_retry_teams.py  inspect_qdrant.py  jira_to_test_case_poc.py  llm_config.py  llm_config.yaml  rag_cli.py  runtime_env.py  test_llm_context.py
alembic/: env.py
alembic_audit/: env.py
alembic_usm/: env.py
app/: alembic_env_shared.py  config.py  database.py  database_sync_backup.py  db_backup.py  db_cutover_workflow.py  db_migrations.py  db_migrations_enum_support.py  db_sqlite_pragma.py  db_types.py  db_url.py  main.py  runtime_locks.py
config/: db_access_policy.yaml
d/: index_analysis.md  test_case_management_analysis.md  test_case_section_list_analysis.md  test_case_set_list_analysis.md  test_run_management_analysis.md
docker/: app-entrypoint.sh
docs/: AI_HELPER_IR_FIRST_RUNBOOK.md  AI_HELPER_STAGE_DEBUG_TOOL.md  IMPLEMENTATION_SUMMARY.md  QA_AI_HELPER_REWRITE_RUNBOOK.md  TEAM_STATS_CHECKLIST.md  TEAM_STATS_COMPARISON.md  TEAM_STATS_TEST_RUN_CHANGES.md  USER_STORY_MAP.md  USER_STORY_MAP_FEATURES.md  USM_ADDITIONAL_FIXES.md  USM_DATABASE_PATH_FIX.md  USM_FIXES_REPORT.md  USM_PERMISSION_MANAGEMENT.md  USM_QUICK_REFERENCE.md  USM_RELATED_NODES_PLAN.md  USM_REQUIREMENTS_CHECKLIST.md  USM_ROOT_AND_HANDLES_FIX.md  USM_TEXT_FORMAT_SPEC.md  USM_TEXT_MODE_README.md  app_token_api_reference.md  app_token_auth.md  automation-hub-overview.md  automation-provider-setup.md  automation-security.md  automation-webhook.md  automation-workflow.md  database-cutover-readiness.md  database_access_inventory.md  docker-app-setup.md  mcp_api_interface.md  mcp_machine_auth.md  mysql-database-migration-runbook.md  mysql-smoke-setup.md  postgres-smoke-setup.md  sqlite-smoke-setup.md  system-log-viewer.md  user_manual.md  usm_example_from_db.usm
keys/: private_key.pem  public_key.pem
openspec/: project.md
scripts/: ac_inspection_poc.py  (+29 more)
(+1320 files in other folders)
