[project]
name = "tcrt_user_story"
version = "0.1.0"
description = "Test Case Management System"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.128.5",
    "uvicorn==0.40.0",
    "python-multipart==0.0.22",
    "jinja2==3.1.6",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "python-dotenv==1.2.1",
    "email-validator==2.3.0",
    "sqlalchemy==2.0.46",
    "alembic==1.18.4",
    "aiosqlite==0.22.1",
    "asyncmy==0.2.11",
    "pymysql==1.1.2",
    "asyncpg==0.31.0",
    "psycopg[binary]==3.3.3",
    "greenlet==3.3.1",
    "requests==2.32.5",
    "aiohttp==3.13.3",
    "pyyaml==6.0.3",
    "pyjwt==2.11.0",
    "passlib==1.7.4",
    "bcrypt==4.0.1",
    "cryptography==46.0.4",
    "casbin==1.43.0",
    "reportlab==4.4.9",
    "matplotlib==3.10.8",
    "qdrant-client==1.16.2",
    "prompt-toolkit==3.0.52",
    "rich==14.3.2",
    "textual==7.5.0",
    "pyperclip==1.11.0",
    "psutil==7.2.2",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "httpx==0.28.1",
]

[project.optional-dependencies]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/testsuite"]

[tool.ruff]
line-length = 120
target-version = "py310"
